--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -9,6 +9,13 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  WEBAPP: dev-core-app-fe
+  GROUP: dev-core-rg
+  ACCOUNT: githubprivatepublish
+  CONTAINER: devcorefe
+  EXPIRY_TIMES: 10 minutes
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,21 +43,41 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
+      
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          path: node-app
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+      - name: Zip the app contents
+        uses: papeloto/action-zip@v1
         with:
-          app-name: 'dev-core-app-fe'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_93F445492F4946ED91E7F9B58FC69ACA }}
-          package: .
+          files: node-app/
+          dest: app.zip
+
+      - name: Set SAS token expiration
+        run: echo "expiry=`date -u -d "$EXPIRY_TIME" '+%Y-%m-%dT%H:%MZ'`" >> $GITHUB_ENV
+
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.19.1
+          inlineScript: |
+            az extension add --name webapp
+
+            az storage account create   -n $ACCOUNT   -g $GROUP -l westus
+            az storage container create -n $CONTAINER --account-name $ACCOUNT
+            az storage blob upload      -f app.zip    --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT
+
+            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{ env.expiry }} --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT | xargs)
+
+            az webapp deploy --name $WEBAPP --resource-group $GROUP --type zip --src-url  $ZIP_URL --async false
+
+            az storage container delete -n $CONTAINER --account-name $ACCOUNT 
