--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -78,6 +78,18 @@ jobs:
 
             ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{ env.expiry }} --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT | xargs)
 
-            az webapp deploy --name $WEBAPP --resource-group $GROUP --type zip --src-url  $ZIP_URL --async false
+            az storage blob upload --account-name $STORAGE_ACCOUNT -c $CONTAINER -f app.zip
+            
+            APP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry $EXPIRY --account-name $STORAGE_ACCOUNT -c $CONTAINER -n app.zip | xargs)
+            az rest --method PUT \
+                    --uri https://management.azure.com/subscriptions/${SUBSCRIPTION}/resourceGroups/${RESOURCE_GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2020-12-01 \
+                    --body '{ 
+                        "properties": { 
+                            "properties": {
+                                "packageUri": "'"${APP_URL}"'"
+                            }, 
+                            "type": "zip",
+                        }
+                    }'
 
             az storage container delete -n $CONTAINER --account-name $ACCOUNT 
