--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -63,7 +63,7 @@ jobs:
           dest: app.zip
 
       - name: Set SAS token expiration
-        run: echo "expiry=`date -u -d "$EXPIRY_TIME" '+%Y-%m-%dT%H:%MZ'`" >> $GITHUB_ENV
+        run: echo "EXPIRY=`date -u -d "$EXPIRY_TIME" '+%Y-%m-%dT%H:%MZ'`" >> $GITHUB_ENV
 
       - name: Azure CLI script
         uses: azure/CLI@v1
@@ -72,11 +72,11 @@ jobs:
           inlineScript: |
             az extension add --name webapp
 
-            az storage account create   -n $ACCOUNT   -g $GROUP -l westeurope
+            az storage account create   -n $ACCOUNT   -g ${GROUP} -l westeurope
             az storage container create -n $CONTAINER --account-name $ACCOUNT
             az storage blob upload      -f app.zip    --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT
 
-            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry ${{ env.expiry }} --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT | xargs)
+            ZIP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry $EXPIRY --account-name $ACCOUNT -c $CONTAINER -n $ACCOUNT | xargs)
 
             az storage blob upload --account-name $ACCOUNT -c $CONTAINER -f app.zip
             
