--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -68,15 +68,23 @@ jobs:
       - name: Azure CLI script
         uses: azure/CLI@v1
         with:
-          azcliversion: 2.30.0
+          azcliversion: 2.50.0
           inlineScript: |
             az extension add --name webapp
 
+            echo "===== CREATE STORAGE ACCOUNT ====="
             az storage account create   -n $ACCOUNT   -g ${GROUP} -l westeurope
+
+            echo "===== CREATE CONTAINER ====="
             az storage container create -n $CONTAINER --account-name $ACCOUNT
             
+            echo "===== BEGIN WITH BLOB UPLOAD ====="
             az storage blob upload --account-name $ACCOUNT -c $CONTAINER -f app.zip
+            
+            echo "===== BEGIN WITH BLOB SAS ====="
             APP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry $EXPIRY --account-name $ACCOUNT -c $CONTAINER -n app.zip | xargs)
+
+            echo "===== BEGIN WITH ONE DEPLOY ====="
             az rest --method PUT \
                     --uri https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2020-12-01 \
                     --body '{ 
