--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -88,10 +88,8 @@ jobs:
             az rest --method PUT \
                     --uri https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2022-03-01 \
                     --body '{ 
-                        "properties": { 
-                            "properties": {
-                                "packageUri": "${APP_URL}"
-                            }, 
+                        "properties": {
+                            "packageUri": "${APP_URL}",
                             "type": "zip",
                         }
                     }'
