--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -87,12 +87,7 @@ jobs:
             echo "===== BEGIN WITH ONE DEPLOY ====="
             az rest --method PUT \
                     --uri https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2020-12-01 \
-                    --body '{ 
-                        "properties": {
-                            "packageUri": "'"${APP_URL}"'",
-                            "type": "zip",
-                        }
-                    }'
+                    --body '{"properties": {"packageUri": "'"${APP_URL}"'", "type": "zip"}}'
 
             echo "===== DELETE CONTAINER ====="
             az storage container delete -n $CONTAINER --account-name $ACCOUNT 
