--- a/.github/workflows/main_dev-core-app-fe.yml
+++ b/.github/workflows/main_dev-core-app-fe.yml
@@ -70,8 +70,6 @@ jobs:
         with:
           azcliversion: 2.50.0
           inlineScript: |
-            az extension add --name webapp
-
             echo "===== CREATE STORAGE ACCOUNT ====="
             az storage account create   -n $ACCOUNT   -g ${GROUP} -l westeurope
 
@@ -85,7 +83,7 @@ jobs:
             APP_URL=$(az storage blob generate-sas --full-uri --permissions r --expiry $EXPIRY --account-name $ACCOUNT -c $CONTAINER -n app.zip | xargs)
 
             echo "===== BEGIN WITH ONE DEPLOY ====="
-            echo "test https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2022-03-01 \"
+            echo "test: https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2022-03-01"
             az rest --method PUT --uri https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEBAPP}/extensions/onedeploy?api-version=2022-03-01 --body '{"properties": {"packageUri": "'"${APP_URL}"'", "type": "zip"}}'
 
             echo "===== DELETE CONTAINER ====="
